Help: little Spacing fix

--- a/frontend/src/hilfe/css/app.css
+++ b/frontend/src/hilfe/css/app.css
@@ -38,7 +38,8 @@
   }
 
   .step {
-    margin-bottom: 3em;
+    margin-top: 5em;
+    margin-bottom: 8em;
   }
 
   .subtext {
